# SIMDVec3

./: .gitignore  CMakeLists.txt
bench/: CMakeLists.txt  bench.cpp
cmake/: ide.cmake  utils.cmake
example/: CMakeLists.txt  example.cpp
include/: Vector3.hpp  Vector3d.hpp  Vector3f.hpp
include/vec3/: Vector3.hpp  Vector3d.hpp  Vector3f.hpp  Version.hpp
tests/: CMakeLists.txt  test.cpp
